hphp/test/slow/class-ptr/get-class-from-type-alias-bad-rgen-cls.php.expectf
Fatal error: Cannot create a new instance of a reified class without the reified generics in %s/class-ptr/get-class-from-type-alias-bad-rgen-cls.php on line 10
